Feature/55 swagger clean (#58)
* [feat] swagger 배포

* [remove] 중복 Config 삭제

* [fix] url경로 수정

* [fix] url경로 수정

* [fix] CORS 설정